# remote-attestation

./: .gitignore  CMakeLists.txt  README.md  version.cmake  version.hpp.in
apps/: README.md
apps/common/: Mqtt.cpp  Prover.cpp  Prover.hpp  common.h
apps/giant/: CMakeLists.txt  README.md  mbed.conf  nv_board.h  prj.conf
apps/rpi/: BoardRPI.cpp  BoardRPI.hpp  CMakeLists.txt  ProverCL.cpp  ProverCL.hpp  README.md  hints.txt  main.cpp  nv_board.h  sediment.h
apps/rpi/udf/: CMakeLists.txt  udf.cpp
apps/zephyr/: BoardZephyr.cpp  BoardZephyr.hpp  README.md  SEDIMENT-zephyr-devices.md  entry.cpp  main.c  nv.c  sediment.h  shell.c
apps/zephyr/mqtt/: Mqtt.cpp  MqttNordic.cpp
configs/: CMakeLists.txt
configs/boards/: +  Application_Server  Giant_Gecko-001  Nordic-001  RAP_Server  RA_Manager  RPI-001  Revocation_Server  Subscriber-001  Ubuntu-001  gg-01  sediment_sub_uris
data/: README.md  private.pem  privateDER.inc  privateRSA.der.inc  privateRSA.pem  privateRSA.pem.inc  public.pem  publicRSA.pem  publicRSA.pem.inc  sediment.db  sign_key.pem  verify_key.pem
data/testfiles/: rpi  ubuntu
modules/: CMakeLists.txt  README.md
modules/mqtt/: Mqtt.cpp  Mqtt.hpp  PahoMqtt.hpp
modules/protocol/: AttestedConfigs.hpp  AuthToken.cpp  AuthToken.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Codec.cpp  Codec.hpp  Comm.cpp  Comm.hpp  Config.cpp  Config.hpp  ConfigComponent.hpp  Crypto.cpp  Crypto.hpp  Endpoint.cpp  Endpoint.hpp  Enum.hpp  KeyBox.cpp  KeyBox.hpp  Log.cpp  Log.hpp  Measurement.cpp  Measurement.hpp  MeasurementList.cpp  MeasurementList.hpp  Message.cpp  Message.hpp  Seec.cpp  Seec.hpp  StateMachine.cpp  StateMachine.hpp  Utils.hpp  Vector.hpp  nv.h  sediment_crypto.cpp  sediment_crypto.h  sediment_udf.hpp
modules/protocol/nlohmann/: json.hpp
servers/: README.md
servers/common/: BoardServer.cpp  BoardServer.hpp  CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  ConfigAttest.cpp  CryptoServer.cpp  CryptoServer.hpp  Device.cpp  Device.hpp  DeviceManager.hpp  DeviceStorage.hpp  DeviceStorageMySQL.cpp  DeviceStorageMySQL.hpp  DeviceStorageSqlite.cpp  DeviceStorageSqlite.hpp  EndpointSock.hpp  MeasurementLog.cpp  MeasurementLog.hpp  Server.cpp  Server.hpp  nv_board.h  sediment.h
servers/firewall/: CMakeLists.txt  Firewall.cpp  Firewall.hpp  FirewallCL.cpp  FirewallCL.hpp  README.md  RSAVerify.cpp  RSAVerify.hpp  main.cpp
servers/verifier/: CMakeLists.txt  ConfigAttest.cpp  README.md  RSASign.cpp  RSASign.hpp  Verifier.cpp  Verifier.hpp  VerifierCL.cpp  VerifierCL.hpp  main.cpp
utils/: compile.sh  install-libraries.sh  install_rule.sh  install_rule_real.sh  run.sh  sediment.cfg
